# plutus-benchmark

./: cabal.project  cabal.project.local  flake.nix  plutus-benchmark.cabal
app/: Plinth.hs  Plutarch.hs
app/Plinth/: Benchmark.hs
app/Plutarch/: Benchmark.hs
nix/: outputs.nix  project.nix  shell.nix
