cabal-version: 3.0
name:          plutus-benchmark
version:       0.1.0.0
synopsis:
  Simple benchmark smart contract implemented with Plinth and Plutarch

license:
author:        Yura
maintainer:    Unisay@users.noreply.github.com
build-type:    Simple

common shared
  ghc-options:
    -Wall -Wincomplete-record-updates -Wincomplete-uni-patterns
    -Wmissing-deriving-strategies -Wunused-foralls -Wunused-foralls
    -fprint-explicit-foralls -fprint-explicit-kinds

  mixins:
    base hiding (Prelude),
    relude (Relude as Prelude, Relude.Container.One),
    relude

  default-extensions:
    BangPatterns
    BlockArguments
    ConstraintKinds
    DataKinds
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    EmptyCase
    EmptyDataDecls
    EmptyDataDeriving
    ExistentialQuantification
    ExplicitForAll
    FlexibleContexts
    FlexibleInstances
    GADTSyntax
    GeneralisedNewtypeDeriving
    ImportQualifiedPost
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    MultiWayIf
    NoImplicitPrelude
    NoStarIsType
    NumericUnderscores
    OverloadedLabels
    OverloadedStrings
    PolyKinds
    PostfixOperators
    RankNTypes
    ScopedTypeVariables
    StandaloneDeriving
    StandaloneKindSignatures
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    ViewPatterns

  build-depends:
    , base       ^>=4.18.2
    , relude     >=1.2.2
    , with-utf8  >=1.1

  hs-source-dirs:     src
  default-language:   Haskell2010

executable plutarch-benchmark
  import:         shared 
  main-is:        Plutarch.hs
  hs-source-dirs: app
  build-depends:  plutarch

executable plinth-benchmark
  import:         shared 
  main-is:        Plinth.hs
  hs-source-dirs: app
  build-depends:
    , plutus-tx         ==1.37.0.0
    , plutus-tx-plugin  ==1.37.0.0
